--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,13 @@
     </dependency>
     <!-- Jackson Json处理工具包 -->
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.9.1</version>
+      <version>2.10.0.pr1</version>
     </dependency>
+
 
     <!-- Servlet/JSP/JSTL -->
     <dependency>
