--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
+  <!--项目名字-->
   <display-name>SSMDemo</display-name>
+  <!--项目主页寻找地址-->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -17,12 +19,14 @@
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--使用通配符加载spring容器这里不仅仅加载了springmvc也加载了applicationContext.xml等什么的-->
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:spring/*.xml</param-value>
     </init-param>
 
   </servlet>
+  <!--拦截所有的请求-->
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
     <url-pattern>/</url-pattern>
